# Projekt_programowanie

./: .gitignore  Bird.cpp  Bird.h  CMakeLists.txt  GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  Ground.cpp  Ground.h  Pipe.cpp  Pipe.h  PipeFactory.cpp  PipeFactory.h  main.cpp
Dokumenty_do_projektu/: Prezentacja_Projektu_FB.pptx
docs/: arkusz_wstepny.md  arkusz_zmian.md  dokumentacja.md  dziennik_bledow.md  generate_pdfs.py  generate_tutorial.py  lista_wymagan.md  scenariusz_filmiku.md
